--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
  <link type="text/css" rel="stylesheet" href="styles.css" media="all" />
+ <link rel="stylesheet" href="img/icomoon68781/style.css"></head>
 </head>
 
 <body>
-  <div class="image">
-  <!--<img src="img/maaret.jpg" alt="" />-->
   <h1>Maaret Pyhäjärvi</h1>
-  </div>
+
+<span class="icon-envelope-o"></span> <a href="mailto:maaret@iki.fi">maaret@iki.fi</a><br>
+<span class="icon-skype"></span> maaret_pyhajarvi<p>
+
+<span class="icon-twitter-square"></span> <a href="http://twitter.com/maaretp">Follow me</a><br>
+<span class="icon-facebook-square"></span> <a href="http://facebook.com/MaaretPy/">Like my page</a><br>
+<span class="icon-linkedin-square"></span> <a href="https://fi.linkedin.com/in/maaret">Link with me</a><p>
+
+<span class="icon-star-o"></span><a href="http://visible-quality.blogspot.com">My blog</a><br>
+<span class="icon-youtube"></span><a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg">My videos</a><p>
+
+<span class="icon-book"></span> <a href="https://leanpub.com/mobprogrammingguidebook">Check out Mob Programming Guidebook</a><br>
+<span class="icon-star"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing">My talk and course brochures</a><br>
+
 </body>
 
 </html>
