Added Skype button

--- a/index.html
+++ b/index.html
@@ -9,18 +9,38 @@
 <body>
   <h1>Maaret Pyhäjärvi</h1>
 
-<span class="icon-envelope-o"></span> <a href="mailto:maaret@iki.fi">maaret@iki.fi</a><br>
-<span class="icon-skype"></span> maaret_pyhajarvi<p>
+<table>
+  <td>
+<span class="icon-envelope-o"></span> <a href="mailto:maaret@iki.fi">maaret@iki.fi</a><p>
 
 <span class="icon-twitter-square"></span> <a href="http://twitter.com/maaretp">Follow me</a><br>
 <span class="icon-facebook-square"></span> <a href="http://facebook.com/MaaretPy/">Like my page</a><br>
 <span class="icon-linkedin-square"></span> <a href="https://fi.linkedin.com/in/maaret">Link with me</a><p>
 
-<span class="icon-star-o"></span><a href="http://visible-quality.blogspot.com">My blog</a><br>
-<span class="icon-youtube"></span><a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg">My videos</a><p>
+<span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com">My blog</a><br>
+<span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg">My videos</a><p>
 
 <span class="icon-book"></span> <a href="https://leanpub.com/mobprogrammingguidebook">Check out Mob Programming Guidebook</a><br>
-<span class="icon-star"></span><a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing">My talk and course brochures</a><br>
+<span class="icon-star"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing">My talk and course brochures</a><p>
+
+  <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
+  <div id="SkypeButton_Call_maaret_pyhajarvi_1">
+   <script type="text/javascript">
+   Skype.ui({
+   "name": "dropdown",
+   "element": "SkypeButton_Call_maaret_pyhajarvi_1",
+   "participants": ["maaret_pyhajarvi"],
+   "imageColor": "white",
+   "imageSize": 32
+   });
+   </script>
+  </div>
+
+</td>
+</table>
+
+
+
 
 </body>
 
