--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
  <link type="text/css" rel="stylesheet" href="styles.css" media="all" />
- <link rel="stylesheet" href="img/icomoon68781/style.css"></head>
+ <link rel="stylesheet" href="img/icomoon/style.css"></head>
 </head>
 
 <body>
@@ -18,7 +18,8 @@
 <span class="icon-linkedin-square"></span> <a href="https://fi.linkedin.com/in/maaret">Link with me</a><p>
 
 <span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com">My blog</a><br>
-<span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg">My videos</a><p>
+<span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg">My videos</a><br>
+<span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp">My slides</a><p>
 
 <span class="icon-book"></span> <a href="https://leanpub.com/mobprogrammingguidebook">Check out Mob Programming Guidebook</a><br>
 <span class="icon-star"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing">My talk and course brochures</a><p>
