--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
    "imageSize": 32
    });
    </script>
-  </div>
+ </div>
+
+
+ <!-- Hotjar Tracking Code for http://maaretp.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:183445,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 
 </td>
 </table>
