Adding speaking engagements page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <span class="icon-star"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a><p>
 
 <span class="icon-lanyrd"></span> <a href="http://lanyrd.com/profile/maaretp/" target="_blank">My events on Lanyrd</a><p>
-  
+<span class="icon-lanyrd"></span> <a href="myTalks.html" target="_blank">My Talks, Workhops and Trainings</a><p>
 
   <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
   <div id="SkypeButton_Call_maaret_pyhajarvi_1">
@@ -42,23 +42,20 @@
  </div>
 
 
- <!-- Hotjar Tracking Code for http://maaretp.com -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:183445,hjsv:5};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-
-
 </td>
 </table>
 
-
+<!-- Hotjar Tracking Code for http://maaretp.com -->
+<script>
+   (function(h,o,t,j,a,r){
+       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+       h._hjSettings={hjid:183445,hjsv:5};
+       a=o.getElementsByTagName('head')[0];
+       r=o.createElement('script');r.async=1;
+       r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+       a.appendChild(r);
+   })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 
 </body>
