changed font icon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <span class="icon-star"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a><p>
 
 <span class="icon-lanyrd"></span> <a href="http://lanyrd.com/profile/maaretp/" target="_blank">My events on Lanyrd</a><p>
-<span class="icon-lanyrd"></span> <a href="myTalks.html" target="_blank">My Talks, Workhops and Trainings</a><p>
+<span class="icon-fort-awesome"></span> <a href="myTalks.html" target="_blank">My Talks, Workhops and Trainings</a><p>
 
   <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
   <div id="SkypeButton_Call_maaret_pyhajarvi_1">
