--- a/myTalks.html
+++ b/myTalks.html
@@ -48,239 +48,151 @@
 
   <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
-<b>2016</b><br />
-<i>Mob Testing </i>[<a href="http://www.slideshare.net/maaretp/mob-testing">slides</a>]<br />
+
+<i>Mob Testing </i>[<a href="http://www.slideshare.net/maaretp/mob-testing">slides, mob exploratory testing emphasis</a>] [<a href="http://www.slideshare.net/maaretp/eurostar-webinar-mob-testing">slides, mob programming emphasis</a>]<br />
 &nbsp; Speaker at Ministry of Testing Masterclass webinar, Online (15.3.2016)<br />
 &nbsp; Speaker at EuroSTAR webinar, Online (20.4.2016)<br />
 &nbsp; Speaker at Agile Testing Days Scandinavia, Gothenburg, Sweden (28.4.2016)<br />
 &nbsp; Speaker at Talentum Ohjelmistotestaus 2016, Helsinki, Finland (24.5.2016) <br />
 <br />
-<i>Exploratory Testing an API</i> [slides]<br />
-&nbsp; Speaker at Booster Conference, Bergen, Norway (9.3.2016) <br />
-&nbsp; Speaker at Agile Alliance Technical Conference, Raleigh, NC, USA (7.-9.4.2016)<br />
+
+<i>Exploratory Testing an API</i> [<a href="http://www.slideshare.net/maaretp/aatc2016-exploratory-testing-an-api">slides</a>]<br />
+&nbsp; Speaker (workshop) at Booster Conference, Bergen, Norway (9.3.2016) <br />
+&nbsp; Speaker (workshop) at Agile Alliance Technical Conference, Raleigh, NC, USA (7.-9.4.2016)<br />
 &nbsp; Speaker at Tampereen Testauspäivät 2016, Tampere, Finland (2.6.2016) <br />
-&nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
+&nbsp; Speaker (workshop) at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 <br />
+
 <i>Learning Programming by Osmosis</i>&nbsp;[slides]<br />
 &nbsp; Speaker at Devoxx UK, London, UK (8.-10.6.2016)<br />
 <br />
-<div style="text-align: left;">
-<div>
-<div style="text-align: left;">
-<i>Tales from Developer Tester Collaboration</i>&nbsp;- paired talk with Llewellyn Falco</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)</div>
-<i><br /></i>
-<i>Exploratory Testing - Explained and Experienced&nbsp;</i></div>
-<div>
-&nbsp; &nbsp;Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)</div>
-<i><br /></i>
-<i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco</div>
-<div style="text-align: left;">
+
+<i>Tales from Developer Tester Collaboration</i> [<a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration">slides</a>] &nbsp;- paired talk with Llewellyn Falco<br />
+&nbsp; &nbsp;Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
+&nbsp; &nbsp;Opening talk Speaker at TestBash NY, New York, USA (6.11.2015)<br />
+&nbsp; &nbsp;Speaker at Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)<br />
+&nbsp; &nbsp;Speaker at a company competence network, Helsinki, Finland (10.9.2015)<br />
+<br />
+
+<i>Exploratory Testing - Explained and Experienced&nbsp;</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
+&nbsp; &nbsp;Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
+&nbsp; &nbsp;Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
+<br />
+
+<i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco<br />
 &nbsp; &nbsp;Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 <br />
+
 <i>Facilitating a Security Testing Mob </i>with Dan Billing<br />
 &nbsp; &nbsp;Facilitator at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
+
 <i>Learning in Layers - A Demonstration of Exploratory Testing</i><br />
 &nbsp; &nbsp;Speaker at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
-<div style="text-align: left;">
-<i>Exploratory Testing Work Course</i> </div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (13.4.2016)</div>
-</div>
+
+<i>Exploratory Testing Work Course</i><br />
+&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (13.4.2016)<br />
+&nbsp; &nbsp;Trainer for Ministry of Testing public course, Brighton, UK (22.10.2015)<br />
+&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (26.11.2015)<br />
+&nbsp; &nbsp;Trainer for Altom public course, Helsinki, Finland (6.5.2015)<br />
 <br />
-<div style="text-align: left;">
-<i>Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code &nbsp;</i>- Paired workshop (1-day) with Llewellyn Falco</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Trainer for Ministry of Testing public course, Brighton, UK (8.3.2016)</div>
+
+<i>Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code &nbsp;</i>- Paired workshop (1-day) with Llewellyn Falco<br />
+&nbsp; &nbsp;Trainer for Ministry of Testing public course, Brighton, UK (8.3.2016)<br />
+&nbsp; &nbsp;Facilitator at TestBash NY, New York, USA (5.11.2015)<br />
+&nbsp; &nbsp;Facilitator at XP2015, Helsinki, Finland (25.5.2015)<br />
 <br />
-<b>2015</b></div>
-<div style="text-align: left;">
-<i>Tales from Developer Tester Collaboration </i>[<a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration">slides</a>] - paired talk with Llewellyn Falco</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Opening talk Speaker at TestBash NY, New York, USA (6.11.2015)</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at a company competence network, Helsinki, Finland (10.9.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<div>
-<i>From Lean Startup to Intrapreneurial Testing</i>&nbsp;[<a href="http://www.slideshare.net/maaretp/lean-startup-and-intrapreneurial-testing">slides</a>]</div>
-<div>
-&nbsp; &nbsp;Opening talk Speaker at TinyTestBash 2015, Brighton, UK (23.10.2015)</div>
-<div>
-&nbsp; &nbsp;Speaker at FISBT Testing Assembly 2015, Helsinki, Finland (23.9.2015)</div>
-</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Collaborative Exploratory and Unit Testing </i>[<a href="http://www.slideshare.net/maaretp/collaborative-exploratory-and-unit-testing-talk-at-testival">slides</a>]</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Keynote speaker at Testival, Split, Croatia (19.9.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Software Talks, Learn to Listen</i> [<a href="http://www.slideshare.net/maaretp/software-talks-learn-to-listen">slides</a>]</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Keynote speaker at Nortal Tech Days, Tallinn, Estonia (22.5.2015)</div>
-<div style="text-align: left;">
-<i><br /></i>
+
+<i>From Lean Startup to Intrapreneurial Testing</i>&nbsp;[<a href="http://www.slideshare.net/maaretp/lean-startup-and-intrapreneurial-testing">slides</a>]<br />
+&nbsp; &nbsp;Opening talk Speaker at TinyTestBash 2015, Brighton, UK (23.10.2015)<br />
+&nbsp; &nbsp;Speaker at FISBT Testing Assembly 2015, Helsinki, Finland (23.9.2015)<br />
 <br />
-<div style="text-align: left;">
-<i>Explore with Intent - Exploratory Testing Self-Management&nbsp;</i>[<a href="http://www.slideshare.net/maaretp/agile2015-explore-with-intent-selfmanagement">slides</a>]</div>
-<div style="text-align: left;">
-<i>&nbsp; &nbsp;</i>Speaker at Agile 2015, Washington DC, USA (4.8.2015)</div>
-<i><br /></i></div>
-<div style="text-align: left;">
-<div style="text-align: left;">
-<i>Quality Doesn't Belong with the Tester&nbsp;</i>[<a href="http://www.slideshare.net/maaretp/testbash-quality-does-not-belong-with-the-tester">slides</a>]</div>
-<div style="text-align: left;">
-<div style="margin: 0px;">
-&nbsp; &nbsp;Speaker at TestBash, Brighton, UK (27.3.2015)</div>
-</div>
-<i><br /></i>
-<i>Continuous Delivery without Test Automation </i>[<a href="http://www.slideshare.net/maaretp/stp-conf-sandiego">slides</a>]</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at Ministry of Testing Masterclass webinar, Online (16.9.2015)</div>
-<div style="text-align: left;">
-<i>&nbsp; &nbsp;</i>Speaker at STPConference, San Diego, USA (1.4.2015)<i>&nbsp; &nbsp;</i></div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Experimenting in Context For Exploratory Testing </i>[<a href="http://www.slideshare.net/maaretp/experimenting-in-context-for-exploratory-testing">slides</a>]</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at Agile Testing Days 2015, Potsdam, Germany (9.11.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Breaking Illusions: Testing is Your Most Valuable Asset</i> [<a href="http://www.slideshare.net/maaretp/btdconf-breaking-illusions-testing-is-your-most-valuable-asset">slides</a>] [<a href="https://www.youtube.com/watch?v=0NAB4nDOzl0">video</a>]</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at BTD Conference, Brussels, Belgium (21.5.2015)</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at ScanAgile 2015, Helsinki, Finland (11.3.2015)</div>
-<div style="text-align: left;">
-<div>
-<i><br /></i></div>
-<div>
-<i>Pairing is Sharing</i>&nbsp;[<a href="http://www.slideshare.net/maaretp/pairing-is-sharing">slides</a>]</div>
-<div>
-&nbsp; &nbsp;Speaker at Tampere Goes Agile 2015, Tampere, Finland (17.10.2015)</div>
-</div>
-<div style="text-align: left;">
-<i><br /></i></div>
-<div style="text-align: left;">
-<i>Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code &nbsp;</i>- Paired workshop (1-day) with Llewellyn Falco</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Facilitator at TestBash NY, New York, USA (5.11.2015)</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Facilitator at XP2015, Helsinki, Finland (25.5.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Exploratory Testing Work Course</i> [<a href="http://www.slideshare.net/maaretp/exploratory-testing-work-course">slides</a>]</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Trainer for Ministry of Testing public course, Brighton, UK (22.10.2015)</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (26.11.2015)</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Trainer for Altom public course, Helsinki, Finland (6.5.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<div>
-<i>Group Learning Unit Testing with Koans</i>&nbsp;</div>
-<div>
-&nbsp; &nbsp;Facilitator at BTD Conference, Brussels, Belgium (20.5.2015)</div>
-</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Test Cases and Testing (Testitapausten suunnittelu), </i>2-day course<i>&nbsp;</i></div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Trainer for Altom public course, Helsinki, Finland (22-23.4.2015</div>
-<div style="text-align: left;">
-<i><br /></i></div>
-<div style="text-align: left;">
-<i>Test-Driven Development with Lego Robots </i>- paired 1/2 day workshop with Ru Cindrea</div>
-<div style="text-align: left;">
-<i>&nbsp; &nbsp;</i>Trainer for TestBash, Brighton, UK (26.3.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Context-Driven Testing</i>, 1/2 day course</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (03/2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<div>
-<i>Serendipity and Perseverance - Test Better</i> [<a href="http://www.slideshare.net/maaretp/xp15-serendipity-and-perseverance-lightning-talk">slides</a>], lightning talk</div>
-<div>
-&nbsp; &nbsp;Speaker at XP2015, Helsinki, Finland (27.5.2015)</div>
-<div>
-<br /></div>
-<div>
-<i>Breaking Your Illusions with Exploratory Testing</i> [<a href="http://www.slideshare.net/maaretp/xp2015-breaking-your-illusions-with-exploratory-testing">slides</a>], short talk</div>
-<div>
-&nbsp; &nbsp;Speaker at XP2015, Helsinki, Finland (28.5.2015)</div>
-<div>
-<br /></div>
-<div>
-<i>Exploratory Testing - Explained and Experienced &nbsp;</i>[<a href="http://www.slideshare.net/maaretp/santa-barbara-agile-exploratory-testing-explained-and-experienced">slides</a>]</div>
-<div>
-&nbsp; &nbsp;Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)</div>
-<div>
-<i><br /></i></div>
-<div>
-<i>Testing as Exploration and Delivering Continuously without Automation&nbsp;</i><a href="http://www.slideshare.net/maaretp/agile-san-diego-testing-as-exploration-continuous-delivery-wo-automation">[slides]</a></div>
-<div>
-&nbsp; &nbsp;Speaker at Agile San Diego meetup, San Diego, USA (2.4.2015)</div>
-<div>
-<br /></div>
-<div>
-<div>
-<i>Experience report: Where is Test Strategy in an Agile Team&nbsp;</i>[<a href="http://www.slideshare.net/maaretp/dewt-where-is-test-strategy-with-an-agile-team">slides</a>]</div>
-<div>
+
+<i>Collaborative Exploratory and Unit Testing </i>[<a href="http://www.slideshare.net/maaretp/collaborative-exploratory-and-unit-testing-talk-at-testival">slides</a>]<br />
+&nbsp; &nbsp;Keynote speaker at Testival, Split, Croatia (19.9.2015)<br />
+<br />
+
+<i>Software Talks, Learn to Listen</i> [<a href="http://www.slideshare.net/maaretp/software-talks-learn-to-listen">slides</a>]<br />
+&nbsp; &nbsp;Keynote speaker at Nortal Tech Days, Tallinn, Estonia (22.5.2015)<br />
+<br />
+
+<i>Explore with Intent - Exploratory Testing Self-Management&nbsp;</i>[<a href="http://www.slideshare.net/maaretp/agile2015-explore-with-intent-selfmanagement">slides</a>]<br />
+<i>&nbsp; &nbsp;</i>Speaker at Agile 2015, Washington DC, USA (4.8.2015)<br />
+<br />
+
+<i>Quality Doesn't Belong with the Tester&nbsp;</i>[<a href="http://www.slideshare.net/maaretp/testbash-quality-does-not-belong-with-the-tester">slides</a>]<br />
+&nbsp; &nbsp;Speaker at TestBash, Brighton, UK (27.3.2015)<br />
+<br />
+
+<i>Continuous Delivery without Test Automation </i>[<a href="http://www.slideshare.net/maaretp/stp-conf-sandiego">slides</a>]<br />
+&nbsp; &nbsp;Speaker at Ministry of Testing Masterclass webinar, Online (16.9.2015)<br />
+<i>&nbsp; &nbsp;</i>Speaker at STPConference, San Diego, USA (1.4.2015)<i>&nbsp; &nbsp;</i><br />
+<br />
+
+<i>Experimenting in Context For Exploratory Testing </i>[<a href="http://www.slideshare.net/maaretp/experimenting-in-context-for-exploratory-testing">slides</a>]<br />
+&nbsp; &nbsp;Speaker at Agile Testing Days 2015, Potsdam, Germany (9.11.2015)<br />
+<br />
+
+<i>Breaking Illusions: Testing is Your Most Valuable Asset</i> [<a href="http://www.slideshare.net/maaretp/btdconf-breaking-illusions-testing-is-your-most-valuable-asset">slides</a>] [<a href="https://www.youtube.com/watch?v=0NAB4nDOzl0">video</a>]<br />
+&nbsp; &nbsp;Speaker at BTD Conference, Brussels, Belgium (21.5.2015)<br />
+&nbsp; &nbsp;Speaker at ScanAgile 2015, Helsinki, Finland (11.3.2015)<br />
+<br />
+
+<i>Pairing is Sharing</i>&nbsp;[<a href="http://www.slideshare.net/maaretp/pairing-is-sharing">slides</a>]<br />
+&nbsp; &nbsp;Speaker at Tampere Goes Agile 2015, Tampere, Finland (17.10.2015)<br />
+<br />
+
+<i>Group Learning Unit Testing with Koans</i><br />
+&nbsp; &nbsp;Facilitator at BTD Conference, Brussels, Belgium (20.5.2015)<br />
+<br />
+
+<i>Test Cases and Testing (Testitapausten suunnittelu), </i>2-day course<i></i><br />
+&nbsp; &nbsp;Trainer for Altom public course, Helsinki, Finland (22-23.4.2015)<br />
+<br />
+
+<i>Test-Driven Development with Lego Robots </i>- paired 1/2 day workshop with Ru Cindrea<br />
+<i>&nbsp; &nbsp;</i>Trainer for TestBash, Brighton, UK (26.3.2015)<br />
+<br />
+
+<i>Context-Driven Testing</i>, 1/2 day course<br />
+&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (03/2015)<br />
+<br />
+
+<i>Serendipity and Perseverance - Test Better</i> [<a href="http://www.slideshare.net/maaretp/xp15-serendipity-and-perseverance-lightning-talk">slides</a>], lightning talk<br />
+&nbsp; &nbsp;Speaker at XP2015, Helsinki, Finland (27.5.2015)<br />
+<br />
+
+<i>Breaking Your Illusions with Exploratory Testing</i> [<a href="http://www.slideshare.net/maaretp/xp2015-breaking-your-illusions-with-exploratory-testing">slides</a>], short talk<br />
+&nbsp; &nbsp;Speaker at XP2015, Helsinki, Finland (28.5.2015)<br />
+<br />
+
+<i>Testing as Exploration and Delivering Continuously without Automation </i><a href="http://www.slideshare.net/maaretp/agile-san-diego-testing-as-exploration-continuous-delivery-wo-automation">[slides]</a><br />
+&nbsp; &nbsp;Speaker at Agile San Diego meetup, San Diego, USA (2.4.2015)<br />
+<br />
+
+<i>Experience report: Where is Test Strategy in an Agile Team </i>[<a href="http://www.slideshare.net/maaretp/dewt-where-is-test-strategy-with-an-agile-team">slides</a>]<br />
 &nbsp; &nbsp;Speaker at DEWT peer conference, Driebergen, the Netherlands (01/2015)<br />
 <br />
-<div>
-<i>Experiences of a tester in the Industry, Experience through Mob Testing&nbsp;</i></div>
-<div>
-&nbsp; &nbsp;Speaker and Facilitator at Aalto University of Applied Sciences, Helsinki, Finland (27.11.2015)</div>
+
+<i>Experiences of a tester in the Industry, Experience through Mob Testing</i><br />
+&nbsp; &nbsp;Speaker and Facilitator at Aalto University of Applied Sciences, Helsinki, Finland (27.11.2015)<br />
+<br />
+
+<i>Mob Exploratory Testing Showdown: Testing Your Tool</i><br />
+&nbsp; &nbsp;Facilitator at Software Testing Finland Event, Jyväskylä, Finland (11.10.2015)<br />
+<br />
+
+<i>My New Lessons on Unit Testing - Asserts Can Be Different</i><br />
+&nbsp; &nbsp;Speaker at Tech Excellence Finland Meetup, Jyväskylä, Finland (11.10.2015)<br />
+<br />
+
+<i>Sustainability. The Fine Line between Work and Hobbies</i><br />
+&nbsp; &nbsp;Speaker at Helsinki Charity Forum meetup (30.10.2015)<br />
+<br />
 </div>
-</div>
-<div>
-<i><br /></i></div>
-<div>
-<i>Mob Exploratory Testing Showdown</i>&nbsp;</div>
-</div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Facilitator at Software Testing Finland Event, Jyväskylä, Finland (11.10.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>My New Lessons on Unit Testing - Asserts Can Be Different&nbsp;</i></div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at Tech Excellence Finland Meetup, Jyväskylä, Finland (11.10.2015)</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<i>Sustainability. The Fine Line between Work and Hobbies</i></div>
-<div style="text-align: left;">
-&nbsp; &nbsp;Speaker at Helsinki Charity Forum meetup (30.10.2015)&nbsp;</div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-<br /></div>
-<div style="text-align: left;">
-[<a href="http://visible-quality.blogspot.fi/p/my-talks.html">2014 and older</a>]</div>
-</div>
+<p><p><p>
+[<a href="http://visible-quality.blogspot.fi/p/my-talks.html">2014 and older</a>]
 
 </td>
 </table>
