--- a/myTalks.html
+++ b/myTalks.html
@@ -22,15 +22,15 @@
   <li><a href="http://www.devoxx.co.uk/">Devoxx UK</a> in London, UK 8-10.6.2016</li>
   <li><a href="https://www.agilealliance.org/agile2016/">Agile Alliance Agile 2016 Conference</a> in Atlanta, GA, USA 25.-27.7.2016</li>
   <li><a href="http://testingassembly.fistb.fi/home">FiSTB Testing Assembly</a> in Helsinki, Finland 20.-21.9.2016 </li>
+  <li><a href="http://testmastersacademy.org/cfp-for-fall-2016.html">Test Masters Academy New Testing Conference</a> in New York, NY, USA 26.-27.9.2016</li>
+  <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a>, Helsinki, Finland 8.-10.2.2017</li>
   </ul>
   <div>
   I seek out to be in: (unconfirmed)</div>
   <div>
   <ul style="text-align: left;">
-  <li><a href="http://testmastersacademy.org/cfp-for-fall-2016.html">Test Masters Academy New Testing Conference</a> in New York, NY, USA 26.-27.9.2016</li>
   <li><a href="http://www.tapost.org/">TAPOST</a>&nbsp;- Theory and Practice of Software Testing, Riga, Latvia 12.10.2016&nbsp;</li>
-  <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://www.agiletestingdays.com/">Agile Testing Days</a> in 5.-9.12.2016, Potsdam, Germany</li>
   </ul>
   </div>
@@ -48,11 +48,20 @@
   <h2>FULL LIST OF SPEAKING ENGAGEMENTS</h2>
 <div style="text-align: left;">
 
+<i>We're Work in Progress - Lessons on Becoming a Great Tester</i><br />
+&nbsp; Keynote speaker at Test Masters Academy New Testing Conference, New York, USA (26-27.9.2016)<br />
+&nbsp; Speaker at FiSTB Testing Assembly, Helsinki, Finland (20-21.9.2016)<br />
+<br />
+
 <i>Mob Testing </i>[<a href="http://www.slideshare.net/maaretp/mob-testing">slides, mob exploratory testing emphasis</a>] [<a href="http://www.slideshare.net/maaretp/eurostar-webinar-mob-testing">slides, mob programming emphasis</a>]<br />
 &nbsp; Speaker at Ministry of Testing Masterclass webinar, Online (15.3.2016)<br />
 &nbsp; Speaker at EuroSTAR webinar, Online (20.4.2016)<br />
 &nbsp; Speaker at Agile Testing Days Scandinavia, Gothenburg, Sweden (28.4.2016)<br />
 &nbsp; Speaker at Talentum Ohjelmistotestaus 2016, Helsinki, Finland (24.5.2016) <br />
+<br />
+
+<i>A Mob Testing Experience (Facilitated Mobbing on Stage)</i><br />
+&nbsp; Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
 <br />
 
 <i>Exploratory Testing an API</i> [<a href="http://www.slideshare.net/maaretp/aatc2016-exploratory-testing-an-api">slides</a>]<br />
