Added TestWorks Conf

--- a/myTalks.html
+++ b/myTalks.html
@@ -22,7 +22,7 @@
   <li><a href="http://www.devoxx.co.uk/">Devoxx UK</a> in London, UK 8-10.6.2016</li>
   <li><a href="https://www.agilealliance.org/agile2016/">Agile Alliance Agile 2016 Conference</a> in Atlanta, GA, USA 25.-27.7.2016</li>
   <li><a href="http://testingassembly.fistb.fi/home">FiSTB Testing Assembly</a> in Helsinki, Finland 20.-21.9.2016 </li>
-  <li><a href="http://testmastersacademy.org/cfp-for-fall-2016.html">Test Masters Academy New Testing Conference</a> in New York, NY, USA 26.-27.9.2016</li>
+  <li><a href="https://t.co/idYxp6qs4C">Test Masters Academy New Testing Conference, Reinventing Testers</a> in New York, NY, USA 26.-27.9.2016</li>
   <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a>, Helsinki, Finland 8.-10.2.2017</li>
   </ul>
@@ -30,6 +30,7 @@
   I seek out to be in: (unconfirmed)</div>
   <div>
   <ul style="text-align: left;">
+  <li><a href="http://testworksconf.com">TestWorks Conference</a> in 7.10.2016, Amsterdam, The Netherlands</li>
   <li><a href="http://www.tapost.org/">TAPOST</a>&nbsp;- Theory and Practice of Software Testing, Riga, Latvia 12.10.2016&nbsp;</li>
   <li><a href="http://www.agiletestingdays.com/">Agile Testing Days</a> in 5.-9.12.2016, Potsdam, Germany</li>
   </ul>
