Updated my talks page

--- a/myTalks.html
+++ b/myTalks.html
@@ -16,24 +16,13 @@
   <h2>UPCOMING CONFERENCES</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://accfi.agile.fi/">Agile Coaching Camp Finland</a> in Helsinki, Finland 20.-22.5.2016&nbsp;</li>
-  <li><a href="http://talentumevents.fi/tivi-ohjelmistotestaus">Talentum Ohjelmistotestaus 2016</a> in Helsinki, Finland 24.-25.5.2016&nbsp;</li>
-  <li><a href="http://www.cs.tut.fi/tapahtumat/testaus16/">Tampereen Testauspäivät 2016</a> in Tampere, Finland 2.6.2016 </li>
-  <li><a href="http://www.devoxx.co.uk/">Devoxx UK</a> in London, UK 8-10.6.2016</li>
   <li><a href="https://www.agilealliance.org/agile2016/">Agile Alliance Agile 2016 Conference</a> in Atlanta, GA, USA 25.-27.7.2016</li>
   <li><a href="http://testingassembly.fistb.fi/home">FiSTB Testing Assembly</a> in Helsinki, Finland 20.-21.9.2016 </li>
   <li><a href="https://t.co/idYxp6qs4C">Test Masters Academy New Testing Conference, Reinventing Testers</a> in New York, NY, USA 26.-27.9.2016</li>
+  <li><a href="http://testworksconf.com">TestWorks Conference</a> in 7.10.2016, Amsterdam, The Netherlands</li>
   <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a>, Helsinki, Finland 8.-10.2.2017</li>
   </ul>
-  <div>
-  I seek out to be in: (unconfirmed)</div>
-  <div>
-  <ul style="text-align: left;">
-  <li><a href="http://testworksconf.com">TestWorks Conference</a> in 7.10.2016, Amsterdam, The Netherlands</li>
-  <li><a href="http://www.tapost.org/">TAPOST</a>&nbsp;- Theory and Practice of Software Testing, Riga, Latvia 12.10.2016&nbsp;</li>
-  </ul>
-  </div>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a>
 
@@ -69,6 +58,7 @@
 &nbsp; Speaker (workshop) at Agile Alliance Technical Conference, Raleigh, NC, USA (7.-9.4.2016)<br />
 &nbsp; Speaker at Tampereen Testauspäivät 2016, Tampere, Finland (2.6.2016) <br />
 &nbsp; Speaker (workshop) at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
+&nbsp; Speaker (workshop) at TestWorks Conference in Amsterdam, Netherlands (7.10.2016)<br />
 <br />
 
 <i>Learning Programming by Osmosis</i>&nbsp;[slides]<br />
