Added my articles

--- a/MyWritings.html
+++ b/MyWritings.html
@@ -16,7 +16,12 @@
   <h2>ARTICLES</h2>
 
   <ul style="text-align: left;">
-  <li><a href="http://maaretp.com">Some article </li>
+    <lI> [TO BE PUBLISHED] Learning Programming through Osmosis. In <i>Voxxed</i>, Autumn 2016.
+    <li> [TO BE PUBLISHED] Exploratory Testing an API. In <i>Software Testing Club</i>, September 2016.
+    <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haNC03UVF4c0Y2UkE">My Year of Lessons for Aspiring Speakers. In <i>Women Testers</i>, January 2016</li>
+    <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haY1VEdVdQQTdBUWM">Turn up the Good. A Tester Meets Mob Programming. In <i>Testing Trapeze</i>, August 2015</li>
+    <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haMjZPUXQwLThlbnM">Use of Rapid Reporter in Exploratory Testing. In <i>Testing Circus</i>, April 2014</li>
+    <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haX0JyTGtuMDRHczg">A Tentative Framework for Managing Software Product Development in Small Companies. In <i>Proceedings of HICCS</i>, 2002.</li>
   </ul>
 
   </td>
