--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 <span class="icon-facebook-square"></span> <a href="http://facebook.com/MaaretPy/" target="_blank">Like my page</a><br>
 <span class="icon-linkedin-square"></span> <a href="https://fi.linkedin.com/in/maaret" target="_blank">Link with me</a><p>
 
+<span class="icon-fort-awesome"></span> <a href="myTalks.html" target="_blank">My Talks, Workhops and Trainings</a><p>
 
 <span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com" target="_blank">My blog</a><br>
 <span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank">My videos</a><br>
 <span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp" target="_blank">My slides</a><p>
+<span class="icon-star"></span> <a href="myWritings.html" target="_blank">My Writings</a><p>
 
 <span class="icon-book"></span> <a href="https://leanpub.com/mobprogrammingguidebook" target="_blank">Check out Mob Programming Guidebook</a><br>
-<span class="icon-star"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a><p>
+<span class="icon-ticket"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a><p>
 
 <span class="icon-lanyrd"></span> <a href="http://lanyrd.com/profile/maaretp/" target="_blank">My events on Lanyrd</a><p>
-<span class="icon-fort-awesome"></span> <a href="myTalks.html" target="_blank">My Talks, Workhops and Trainings</a><p>
+
+
 
   <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
   <div id="SkypeButton_Call_maaret_pyhajarvi_1">
