--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com" target="_blank">My blog</a><br>
 <span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank">My videos</a><br>
-<span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp" target="_blank">My slides</a><p>
+<span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp" target="_blank">My slides</a><br>
 <span class="icon-star"></span> <a href="myWritings.html" target="_blank">My Writings</a><p>
 
 <span class="icon-book"></span> <a href="https://leanpub.com/mobprogrammingguidebook" target="_blank">Check out Mob Programming Guidebook</a><br>
