--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <span class="icon-star-o"></span> <a href="http://visible-quality.blogspot.com" target="_blank">My blog</a><br>
 <span class="icon-youtube"></span> <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank">My videos</a><br>
 <span class="icon-slideshare"></span> <a href="http://www.slideshare.net/maaretp" target="_blank">My slides</a><br>
-<span class="icon-star"></span> <a href="myWritings.html" target="_blank">My Writings</a><p>
+<span class="icon-star"></span> <a href="myArticles.html" target="_blank">My Writings</a><p>
 
 <span class="icon-book"></span> <a href="https://leanpub.com/mobprogrammingguidebook" target="_blank">Check out Mob Programming Guidebook</a><br>
 <span class="icon-ticket"></span> <a href="https://drive.google.com/folderview?id=0B07e3JZGe_haTnlXUHJ4MXo0aTA&usp=sharing" target="_blank">My talk and course brochures</a><p>
