--- a/myArticles.html
+++ b/myArticles.html
@@ -3,7 +3,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
- <link type="text/css" rel="stylesheet" href="styles_page.css" media="all" />
+ <link type="text/css" rel="stylesheet" href="styles_page_articles.css" media="all" />
 </head>
 
 <body>
