--- a/myArticles.html
+++ b/myArticles.html
@@ -27,6 +27,19 @@
   </td>
 </table>
 
+<table>
+  <td>
+
+  <h2>BOOKS</h2>
+
+  <ul style="text-align: left;">
+    <li><a href="http://leanpub.com/mobprogrammingguidebook">Mob Programming Guidebook (co-authored with Llewellyn Falco)</li>
+    <li><a href="http://leanpub.com/exploratorytesting">Exploratory Testing (to be published)</li>
+  </ul>
+
+  </td>
+</table>
+
 </body>
 
 </html>
