--- a/myArticles.html
+++ b/myArticles.html
@@ -40,6 +40,18 @@
   </td>
 </table>
 
+<table>
+  <td>
+
+  <h2>MY BLOG</h2>
+
+  <ul style="text-align: left;">
+    <li><a href="http://visible-quality.blogspot.fi">A Seasoned Testers Crystal Ball</li>
+  </ul>
+
+  </td>
+</table>
+
 </body>
 
 </html>
