Updated talks page

--- a/myTalks.html
+++ b/myTalks.html
@@ -25,6 +25,13 @@
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a>
 
+  <H2>UPCOMING PUBLIC TRAININGS</H2>
+  I will deliver <br />
+  <ul style="text-align: left;">
+    <li><a href="https://profit.cc.jyu.fi/training/enroll/34227" Testauksen automatisointi (Test automation)</a>, 2 days, Jyväskylä (Profit), Finland 7.-8.9.2016 </li>
+      <li> Tutkivan testauksen työkurssi  (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
+    </ul>
+
 </td>
 </table>
 
@@ -52,7 +59,7 @@
 &nbsp; Speaker at TestBash Philly, Philadelphia, USA (10-11.11.2016)<br />
 <br />
 
-<i>Exploratory Testing an API</i> [<a href="http://www.slideshare.net/maaretp/aatc2016-exploratory-testing-an-api">slides</a>]<br />
+<i>Exploratory Testing an API</i> [<a href="http://www.slideshare.net/maaretp/agile2016-exploratory-testing-an-api">slides</a>]<br />
 &nbsp; Speaker (workshop) at Booster Conference, Bergen, Norway (9.3.2016) <br />
 &nbsp; Speaker (workshop) at Agile Alliance Technical Conference, Raleigh, NC, USA (7.-9.4.2016)<br />
 &nbsp; Speaker at Tampereen Testauspäivät 2016, Tampere, Finland (2.6.2016) <br />
@@ -60,7 +67,7 @@
 &nbsp; Speaker (workshop) at TestWorks Conference in Amsterdam, Netherlands (7.10.2016)<br />
 <br />
 
-<i>Learning Programming by Osmosis</i>&nbsp;[slides]<br />
+<i>Learning Programming through Osmosis</i><a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis">[slides]</a><br />
 &nbsp; Speaker at Devoxx UK, London, UK (8.-10.6.2016)<br />
 <br />
 
@@ -76,7 +83,7 @@
 &nbsp; &nbsp;Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
 <br />
 
-<i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco<br />
+<i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco  <a href="http://www.slideshare.net/llewellynfalco/strong-style-pairing">[slides]</a><br />
 &nbsp; &nbsp;Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 <br />
 
