Added podcasts to list

--- a/myArticles.html
+++ b/myArticles.html
@@ -30,6 +30,19 @@
 <table>
   <td>
 
+  <h2>PODCAST APPEARANCES</h2>
+
+  <ul style="text-align: left;">
+    <li>Developer on Fire, <a href="http://developeronfire.com/episode-116-maaret-pyhajarvi-enabling-voices">Episode 116 / Maaret Pyhäjärvi: Enabling Voices</a>, 28.3.2016</li>
+    <li>Testing in the Pub, <a href="http://testinginthepub.co.uk/testinginthepub/podcast/testing-in-the-pub-episode-22-mobbing-and-pairing-with-maaret-pyhajarvi/">Episode 22 / Mobbing and Pairing with Maaret Pyhäjärvi</a>, 20.11.2015</li>
+  </ul>
+
+  </td>
+</table>
+
+<table>
+  <td>
+
   <h2>BOOKS</h2>
 
   <ul style="text-align: left;">
