--- a/myTalks.html
+++ b/myTalks.html
@@ -27,7 +27,7 @@
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-    <li><a href="https://profit.cc.jyu.fi/training/enroll/34227" Testauksen automatisointi (Test automation)</a>, 2 days, Jyväskylä (Profit), Finland 7.-8.9.2016 </li>
+    <li><a href="https://profit.cc.jyu.fi/training/enroll/34227"> Testauksen automatisointi (Test automation)</a>, 2 days, Jyväskylä (Profit), Finland 7.-8.9.2016 </li>
       <li> Tutkivan testauksen työkurssi  (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
     </ul>
 
