closing tag added

--- a/myTalks.html
+++ b/myTalks.html
@@ -23,7 +23,7 @@
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a>, Helsinki, Finland 8.-10.2.2017</li>
   </ul>
 
-  <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a>
+  <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
