Added article, podcast and talk

--- a/myArticles.html
+++ b/myArticles.html
@@ -17,7 +17,7 @@
 
   <ul style="text-align: left;">
     <lI> [TO BE PUBLISHED] Learning Programming through Osmosis. In <i>Voxxed</i>, Autumn 2016.
-    <li> [TO BE PUBLISHED] Exploratory Testing an API. In <i>Software Testing Club</i>, September 2016.
+    <li><a href"https://dojo.ministryoftesting.com/lessons/exploratory-testing-an-api">Exploratory Testing an API</a>. In <i>The Testing Planet 2016</i>, September 2016.
     <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haNC03UVF4c0Y2UkE">My Year of Lessons for Aspiring Speakers. In <i>Women Testers</i>, January 2016</li>
     <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haY1VEdVdQQTdBUWM">Turn up the Good. A Tester Meets Mob Programming. In <i>Testing Trapeze</i>, August 2015</li>
     <li><a href="https://drive.google.com/open?id=0B07e3JZGe_haMjZPUXQwLThlbnM">Use of Rapid Reporter in Exploratory Testing. In <i>Testing Circus</i>, April 2014</li>
@@ -33,6 +33,7 @@
   <h2>PODCAST APPEARANCES</h2>
 
   <ul style="text-align: left;">
+    <li>Test Talks, <a href="https://joecolantonio.com/testtalks/115-agile-lean-startup-mindsets-maaret-pyhajarvi/">Episode 115 / Agile, Lean Startup Mindsets with Maaret Pyhäjärvi</a>, 14.8.2016</li>
     <li>Developer on Fire, <a href="http://developeronfire.com/episode-116-maaret-pyhajarvi-enabling-voices">Episode 116 / Maaret Pyhäjärvi: Enabling Voices</a>, 28.3.2016</li>
     <li>Testing in the Pub, <a href="http://testinginthepub.co.uk/testinginthepub/podcast/testing-in-the-pub-episode-22-mobbing-and-pairing-with-maaret-pyhajarvi/">Episode 22 / Mobbing and Pairing with Maaret Pyhäjärvi</a>, 20.11.2015</li>
   </ul>
