--- a/myTalks.html
+++ b/myTalks.html
@@ -66,7 +66,7 @@
 &nbsp; Speaker (workshop) at TestWorks Conference in Amsterdam, Netherlands (7.10.2016)<br />
 <br />
 
-<i>Learning Programming through Osmosis</i><a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis">[slides]</a><br />
+<i>Learning Programming through Osmosis</i><a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis">[slides]</a> <a href="https://www.youtube.com/watch?v=zIFEPCAkZCU&list=PLKuh52zVrL6l8RfKkezmHSMCcVqb2_NCC&">[video]</a><br />
 &nbsp; Speaker at Devoxx UK, London, UK (8.-10.6.2016)<br />
 <br />
 
