Updates speaking engagements

--- a/myTalks.html
+++ b/myTalks.html
@@ -20,6 +20,7 @@
   <li><a href="https://t.co/idYxp6qs4C">Test Masters Academy New Testing Conference, Reinventing Testers</a> in New York, NY, USA 26.-27.9.2016</li>
   <li><a href="http://testworksconf.com">TestWorks Conference</a> in 7.10.2016, Amsterdam, The Netherlands</li>
   <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
+  <li><a href="http://aadays.pl">Agile and Automation Days 2016</a>, Warsaw, Poland 21.-22.11.2016</li>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a>, Helsinki, Finland 8.-10.2.2017</li>
   </ul>
 
@@ -27,8 +28,7 @@
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-    <li><a href="https://profit.cc.jyu.fi/training/enroll/34227"> Testauksen automatisointi (Test automation)</a>, 2 days, Jyväskylä (Profit), Finland 7.-8.9.2016 </li>
-      <li> Tutkivan testauksen työkurssi  (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
+    <li> Tutkivan testauksen työkurssi  (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
     </ul>
 
 </td>
@@ -46,6 +46,10 @@
 &nbsp; Keynote speaker at Test Masters Academy New Testing Conference, New York, USA (26-27.9.2016)<br />
 &nbsp; Speaker at FiSTB Testing Assembly, Helsinki, Finland (20-21.9.2016)<br />
 <br />
+
+<i>Perfecting the Craft of Test Automation</i><br />
+&nbsp; Keynote speaker at Agile and Automation Days, Warsaw, Poland (21.11.2016)
+&nbsp; Speaker at AgileJKL meetup, Jyväskylä, Finland (7.9.2016)
 
 <i>Mob Testing </i>[<a href="http://www.slideshare.net/maaretp/mob-testing">slides, mob exploratory testing emphasis</a>] [<a href="http://www.slideshare.net/maaretp/eurostar-webinar-mob-testing">slides, mob programming emphasis</a>]<br />
 &nbsp; Speaker at Ministry of Testing Masterclass webinar, Online (15.3.2016)<br />
@@ -71,127 +75,130 @@
 <br />
 
 <i>Tales from Developer Tester Collaboration</i> [<a href="http://www.slideshare.net/maaretp/tales-from-tester-developer-collaboration">slides</a>] &nbsp;- paired talk with Llewellyn Falco<br />
-&nbsp; &nbsp;Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
-&nbsp; &nbsp;Opening talk Speaker at TestBash NY, New York, USA (6.11.2015)<br />
-&nbsp; &nbsp;Speaker at Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)<br />
-&nbsp; &nbsp;Speaker at a company competence network, Helsinki, Finland (10.9.2015)<br />
+&nbsp; Speaker at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
+&nbsp; Opening talk Speaker at TestBash NY, New York, USA (6.11.2015)<br />
+&nbsp; Speaker at Software Testing Finland / Helsinki Agile Testing meetup (7.10.2015)<br />
+&nbsp; Speaker at a company competence network, Helsinki, Finland (10.9.2015)<br />
 <br />
 
 <i>Exploratory Testing - Explained and Experienced&nbsp;</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
-&nbsp; &nbsp;Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
-&nbsp; &nbsp;Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
+&nbsp; Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
+&nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
 <br />
 
 <i>Strong-Style Pairing&nbsp;</i>- paired talk with Llewellyn Falco  <a href="http://www.slideshare.net/llewellynfalco/strong-style-pairing">[slides]</a><br />
-&nbsp; &nbsp;Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
+&nbsp; Speaker at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 <br />
 
 <i>Facilitating a Security Testing Mob </i>with Dan Billing<br />
-&nbsp; &nbsp;Facilitator at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
+&nbsp; Facilitator at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
 
 <i>Learning in Layers - A Demonstration of Exploratory Testing</i><br />
-&nbsp; &nbsp;Speaker at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
+&nbsp; Speaker at European Testing Conference 2016, Bucharest, Romania (12.2.2016)<br />
 <br />
 
 <i>Exploratory Testing Work Course</i><br />
-&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (13.4.2016)<br />
-&nbsp; &nbsp;Trainer for Ministry of Testing public course, Brighton, UK (22.10.2015)<br />
-&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (26.11.2015)<br />
-&nbsp; &nbsp;Trainer for Altom public course, Helsinki, Finland (6.5.2015)<br />
+&nbsp; Trainer for a customer organization, Helsinki, Finland (13.4.2016)<br />
+&nbsp; Trainer for Ministry of Testing public course, Brighton, UK (22.10.2015)<br />
+&nbsp; Trainer for a customer organization, Helsinki, Finland (26.11.2015)<br />
+&nbsp; Trainer for Altom public course, Helsinki, Finland (6.5.2015)<br />
 <br />
 
+<i>Test Automation Work Course</i><br />
+&nbsp; Trainer for Urasilta public course, Jyväskylä, Finland (7-8.9.2016)<br />
+
 <i>Collaborative Exploratory and Unit Testing - How to Harness the Insights of Bug Discovery to Protect Your Code &nbsp;</i>- Paired workshop (1-day) with Llewellyn Falco<br />
-&nbsp; &nbsp;Trainer for Ministry of Testing public course, Brighton, UK (8.3.2016)<br />
-&nbsp; &nbsp;Facilitator at TestBash NY, New York, USA (5.11.2015)<br />
-&nbsp; &nbsp;Facilitator at XP2015, Helsinki, Finland (25.5.2015)<br />
+&nbsp; Trainer for Ministry of Testing public course, Brighton, UK (8.3.2016)<br />
+&nbsp; Facilitator at TestBash NY, New York, USA (5.11.2015)<br />
+&nbsp; Facilitator at XP2015, Helsinki, Finland (25.5.2015)<br />
 <br />
 
 <i>From Lean Startup to Intrapreneurial Testing</i>&nbsp;[<a href="http://www.slideshare.net/maaretp/lean-startup-and-intrapreneurial-testing">slides</a>]<br />
-&nbsp; &nbsp;Opening talk Speaker at TinyTestBash 2015, Brighton, UK (23.10.2015)<br />
-&nbsp; &nbsp;Speaker at FISBT Testing Assembly 2015, Helsinki, Finland (23.9.2015)<br />
+&nbsp; Opening talk Speaker at TinyTestBash 2015, Brighton, UK (23.10.2015)<br />
+&nbsp; Speaker at FISBT Testing Assembly 2015, Helsinki, Finland (23.9.2015)<br />
 <br />
 
 <i>Collaborative Exploratory and Unit Testing </i>[<a href="http://www.slideshare.net/maaretp/collaborative-exploratory-and-unit-testing-talk-at-testival">slides</a>]<br />
-&nbsp; &nbsp;Keynote speaker at Testival, Split, Croatia (19.9.2015)<br />
+&nbsp; Keynote speaker at Testival, Split, Croatia (19.9.2015)<br />
 <br />
 
 <i>Software Talks, Learn to Listen</i> [<a href="http://www.slideshare.net/maaretp/software-talks-learn-to-listen">slides</a>]<br />
-&nbsp; &nbsp;Keynote speaker at Nortal Tech Days, Tallinn, Estonia (22.5.2015)<br />
+&nbsp; Keynote speaker at Nortal Tech Days, Tallinn, Estonia (22.5.2015)<br />
 <br />
 
 <i>Explore with Intent - Exploratory Testing Self-Management&nbsp;</i>[<a href="http://www.slideshare.net/maaretp/agile2015-explore-with-intent-selfmanagement">slides</a>]<br />
-<i>&nbsp; &nbsp;</i>Speaker at Agile 2015, Washington DC, USA (4.8.2015)<br />
+<i>&nbsp; </i>Speaker at Agile 2015, Washington DC, USA (4.8.2015)<br />
 <br />
 
 <i>Quality Doesn't Belong with the Tester&nbsp;</i>[<a href="http://www.slideshare.net/maaretp/testbash-quality-does-not-belong-with-the-tester">slides</a>]<br />
-&nbsp; &nbsp;Speaker at TestBash, Brighton, UK (27.3.2015)<br />
+&nbsp; Speaker at TestBash, Brighton, UK (27.3.2015)<br />
 <br />
 
 <i>Continuous Delivery without Test Automation </i>[<a href="http://www.slideshare.net/maaretp/stp-conf-sandiego">slides</a>]<br />
-&nbsp; &nbsp;Speaker at Ministry of Testing Masterclass webinar, Online (16.9.2015)<br />
-<i>&nbsp; &nbsp;</i>Speaker at STPConference, San Diego, USA (1.4.2015)<i>&nbsp; &nbsp;</i><br />
+&nbsp; Speaker at Ministry of Testing Masterclass webinar, Online (16.9.2015)<br />
+&nbsp; Speaker at STPConference, San Diego, USA (1.4.2015)<br />
 <br />
 
 <i>Experimenting in Context For Exploratory Testing </i>[<a href="http://www.slideshare.net/maaretp/experimenting-in-context-for-exploratory-testing">slides</a>]<br />
-&nbsp; &nbsp;Speaker at Agile Testing Days 2015, Potsdam, Germany (9.11.2015)<br />
+&nbsp; Speaker at Agile Testing Days 2015, Potsdam, Germany (9.11.2015)<br />
 <br />
 
 <i>Breaking Illusions: Testing is Your Most Valuable Asset</i> [<a href="http://www.slideshare.net/maaretp/btdconf-breaking-illusions-testing-is-your-most-valuable-asset">slides</a>] [<a href="https://www.youtube.com/watch?v=0NAB4nDOzl0">video</a>]<br />
-&nbsp; &nbsp;Speaker at BTD Conference, Brussels, Belgium (21.5.2015)<br />
-&nbsp; &nbsp;Speaker at ScanAgile 2015, Helsinki, Finland (11.3.2015)<br />
+&nbsp; Speaker at BTD Conference, Brussels, Belgium (21.5.2015)<br />
+&nbsp; Speaker at ScanAgile 2015, Helsinki, Finland (11.3.2015)<br />
 <br />
 
 <i>Pairing is Sharing</i>&nbsp;[<a href="http://www.slideshare.net/maaretp/pairing-is-sharing">slides</a>]<br />
-&nbsp; &nbsp;Speaker at Tampere Goes Agile 2015, Tampere, Finland (17.10.2015)<br />
+&nbsp; Speaker at Tampere Goes Agile 2015, Tampere, Finland (17.10.2015)<br />
 <br />
 
 <i>Group Learning Unit Testing with Koans</i><br />
-&nbsp; &nbsp;Facilitator at BTD Conference, Brussels, Belgium (20.5.2015)<br />
+&nbsp; Facilitator at BTD Conference, Brussels, Belgium (20.5.2015)<br />
 <br />
 
 <i>Test Cases and Testing (Testitapausten suunnittelu), </i>2-day course<i></i><br />
-&nbsp; &nbsp;Trainer for Altom public course, Helsinki, Finland (22-23.4.2015)<br />
+&nbsp;Trainer for Altom public course, Helsinki, Finland (22-23.4.2015)<br />
 <br />
 
 <i>Test-Driven Development with Lego Robots </i>- paired 1/2 day workshop with Ru Cindrea<br />
-<i>&nbsp; &nbsp;</i>Trainer for TestBash, Brighton, UK (26.3.2015)<br />
+<i>&nbsp;</i>Trainer for TestBash, Brighton, UK (26.3.2015)<br />
 <br />
 
 <i>Context-Driven Testing</i>, 1/2 day course<br />
-&nbsp; &nbsp;Trainer for a customer organization, Helsinki, Finland (03/2015)<br />
+&nbsp;Trainer for a customer organization, Helsinki, Finland (03/2015)<br />
 <br />
 
 <i>Serendipity and Perseverance - Test Better</i> [<a href="http://www.slideshare.net/maaretp/xp15-serendipity-and-perseverance-lightning-talk">slides</a>], lightning talk<br />
-&nbsp; &nbsp;Speaker at XP2015, Helsinki, Finland (27.5.2015)<br />
+&nbsp;Speaker at XP2015, Helsinki, Finland (27.5.2015)<br />
 <br />
 
 <i>Breaking Your Illusions with Exploratory Testing</i> [<a href="http://www.slideshare.net/maaretp/xp2015-breaking-your-illusions-with-exploratory-testing">slides</a>], short talk<br />
-&nbsp; &nbsp;Speaker at XP2015, Helsinki, Finland (28.5.2015)<br />
+&nbsp;Speaker at XP2015, Helsinki, Finland (28.5.2015)<br />
 <br />
 
 <i>Testing as Exploration and Delivering Continuously without Automation </i><a href="http://www.slideshare.net/maaretp/agile-san-diego-testing-as-exploration-continuous-delivery-wo-automation">[slides]</a><br />
-&nbsp; &nbsp;Speaker at Agile San Diego meetup, San Diego, USA (2.4.2015)<br />
+&nbsp;Speaker at Agile San Diego meetup, San Diego, USA (2.4.2015)<br />
 <br />
 
 <i>Experience report: Where is Test Strategy in an Agile Team </i>[<a href="http://www.slideshare.net/maaretp/dewt-where-is-test-strategy-with-an-agile-team">slides</a>]<br />
-&nbsp; &nbsp;Speaker at DEWT peer conference, Driebergen, the Netherlands (01/2015)<br />
+&nbsp;Speaker at DEWT peer conference, Driebergen, the Netherlands (01/2015)<br />
 <br />
 
 <i>Experiences of a tester in the Industry, Experience through Mob Testing</i><br />
-&nbsp; &nbsp;Speaker and Facilitator at Aalto University of Applied Sciences, Helsinki, Finland (27.11.2015)<br />
+&nbsp;Speaker and Facilitator at Aalto University of Applied Sciences, Helsinki, Finland (27.11.2015)<br />
 <br />
 
 <i>Mob Exploratory Testing Showdown: Testing Your Tool</i><br />
-&nbsp; &nbsp;Facilitator at Software Testing Finland Event, Jyväskylä, Finland (11.10.2015)<br />
+&nbsp;Facilitator at Software Testing Finland Event, Jyväskylä, Finland (11.10.2015)<br />
 <br />
 
 <i>My New Lessons on Unit Testing - Asserts Can Be Different</i><br />
-&nbsp; &nbsp;Speaker at Tech Excellence Finland Meetup, Jyväskylä, Finland (11.10.2015)<br />
+&nbsp;Speaker at Tech Excellence Finland Meetup, Jyväskylä, Finland (11.10.2015)<br />
 <br />
 
 <i>Sustainability. The Fine Line between Work and Hobbies</i><br />
-&nbsp; &nbsp;Speaker at Helsinki Charity Forum meetup (30.10.2015)<br />
+&nbsp;Speaker at Helsinki Charity Forum meetup (30.10.2015)<br />
 <br />
 </div>
 <p><p><p>
