Updated speaking list

--- a/myTalks.html
+++ b/myTalks.html
@@ -18,17 +18,19 @@
   <ul style="text-align: left;">
   <li><a href="http://testingassembly.fistb.fi/home">FiSTB Testing Assembly</a> in Helsinki, Finland 20.-21.9.2016 </li>
   <li><a href="https://t.co/idYxp6qs4C">Test Masters Academy New Testing Conference, Reinventing Testers</a> in New York, NY, USA 26.-27.9.2016</li>
-  <li><a href="http://testworksconf.com">TestWorks Conference</a> in 7.10.2016, Amsterdam, The Netherlands</li>
+  <li><a href="http://testworksconf.com">TestWorks Conference</a> in Amsterdam, The Netherlands 7.10.2016</li>
+  <li><a href="http://talentumevents.fi/testaus/">Ohjelmistotestaus 2016</a> in Helsinki, Finland 8.11.2016</li>
   <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
-  <li><a href="http://aadays.pl">Agile and Automation Days 2016</a>, Warsaw, Poland 21.-22.11.2016</li>
-  <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a>, Helsinki, Finland 8.-10.2.2017</li>
+  <li><a href="http://aadays.pl">Agile and Automation Days 2016</a> in Warsaw, Poland 21.-22.11.2016</li>
+  <li><a href="http://agiletestingdays.com">Agile Testing Days 2016</a> in Potsdam, Germany 5.-9.12.2016</li>
+  <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a> in Helsinki, Finland 8.-10.2.2017</li>
   </ul>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
-    <li> Tutkivan testauksen työkurssi  (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
+    <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
     </ul>
 
 </td>
