--- a/myTalks.html
+++ b/myTalks.html
@@ -18,7 +18,7 @@
   <ul style="text-align: left;">
   <li><a href="http://testingassembly.fistb.fi/home">FiSTB Testing Assembly</a> in Helsinki, Finland 20.-21.9.2016 </li>
   <li><a href="https://t.co/idYxp6qs4C">Test Masters Academy New Testing Conference, Reinventing Testers</a> in New York, NY, USA 26.-27.9.2016</li>
-  <li><a href="http://testworksconf.com">TestWorks Conference</a> in Amsterdam, The Netherlands 7.10.2016</li>
+  <li><a href="http://testworksconf.com">TestWorks Conference</a> in Amsterdam, The Netherlands 6.-7.10.2016</li>
   <li><a href="http://talentumevents.fi/testaus/">Ohjelmistotestaus 2016</a> in Helsinki, Finland 8.11.2016</li>
   <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://aadays.pl">Agile and Automation Days 2016</a> in Warsaw, Poland 21.-22.11.2016</li>
@@ -84,6 +84,7 @@
 <br />
 
 <i>Exploratory Testing - Explained and Experienced&nbsp;</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
+&nbsp; Speaker (workshop) at TestWorks Conference, Amsterdam, the Netherlands (6.10.2016) (co-trained with Maaike Brinkhoff)
 &nbsp; Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
 &nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
 <br />
