--- a/myTalks.html
+++ b/myTalks.html
@@ -21,7 +21,9 @@
   <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://aadays.pl">Agile and Automation Days 2016</a> in Warsaw, Poland 21.-22.11.2016</li>
   <li><a href="http://agiletestingdays.com">Agile Testing Days 2016</a> in Potsdam, Germany 5.-9.12.2016</li>
+  <li><a href="http://expoqa.com">ExpoQA Test Academy</a> in Barcelona, Spain 25.1.2017</lI>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a> in Helsinki, Finland 8.-10.2.2017</li>
+  <li><a href="https://agilescandia.com">Agile Testing Days Scandinavia 2017</a> in Gothenburg, Sweden 27.-28.3.2017</li>
   </ul>
 
   <b> Would you like your conference to be on this list? Please <a href="mailto:maaret@iki.fi">invite me!</a></b>
@@ -82,6 +84,7 @@
 <br />
 
 <i>Exploratory Testing - Explained and Experienced&nbsp;</i> [<a href="http://www.slideshare.net/maaretp/agile-serbia-exploratory-testing-explained-and-experienced">slides</a>]<br />
+&nbsp; Speaker (masterclass) at ExpoQA Academy Day, Barcelona (25.1.2017)
 &nbsp; Speaker (workshop) at TestWorks Conference, Amsterdam, the Netherlands (6.10.2016) (co-trained with Maaike Brinkhoff)
 &nbsp; Speaker (workshop) at Agile Serbia, Belgrade, Serbia (23.4.2016)<br />
 &nbsp; Speaker at Santa Barbara Agile meetup, Santa Barbara, USA (15.4.2015)<br />
