Edited the conferences & publications

--- a/myTalks.html
+++ b/myTalks.html
@@ -16,12 +16,11 @@
   <h2>UPCOMING CONFERENCES</h2>
   I will be in<br />
   <ul style="text-align: left;">
-  <li><a href="http://testworksconf.com">TestWorks Conference</a> in Amsterdam, The Netherlands 6.-7.10.2016</li>
   <li><a href="http://talentumevents.fi/testaus/">Ohjelmistotestaus 2016</a> in Helsinki, Finland 8.11.2016</li>
   <li><a href="http://www.ministryoftesting.com/training-events/testbash-philadelphia-2016/">Test Bash Philadelphia</a> in Philadelphia, USA, 10.-11.11.2016</li>
   <li><a href="http://aadays.pl">Agile and Automation Days 2016</a> in Warsaw, Poland 21.-22.11.2016</li>
   <li><a href="http://agiletestingdays.com">Agile Testing Days 2016</a> in Potsdam, Germany 5.-9.12.2016</li>
-  <li><a href="http://expoqa.com">ExpoQA Test Academy</a> in Barcelona, Spain 25.1.2017</lI>
+  <li><a href="http://expoqa.com">ExpoQA Test Academy</a> in Barcelona, Spain 25.1.2017</li>
   <li><a href="http://europeantestingconference.eu/">European Testing Conference 2017</a> in Helsinki, Finland 8.-10.2.2017</li>
   <li><a href="https://agilescandia.com">Agile Testing Days Scandinavia 2017</a> in Gothenburg, Sweden 27.-28.3.2017</li>
   </ul>
@@ -30,6 +29,7 @@
 
   <H2>UPCOMING PUBLIC TRAININGS</H2>
   <ul style="text-align: left;">
+    <li> <a href="http://europeantestingconference.eu/2017/trainings/">Mob Testing</a>, 1 day, Helsinki (European Testing Conference), Finland 8.2.2016
     <li> Tutkivan testauksen työkurssi (Exploratory Testing Work Course), 2 days, Helsinki (Talentum), Finland, February 2017 and September 2017</li>
     </ul>
 
@@ -70,6 +70,7 @@
 &nbsp; Speaker at Tampereen Testauspäivät 2016, Tampere, Finland (2.6.2016) <br />
 &nbsp; Speaker (workshop) at Agile 2016 Conference in Atlanta, GA, USA (25.-29.7.2016)<br />
 &nbsp; Speaker (workshop) at TestWorks Conference in Amsterdam, Netherlands (7.10.2016)<br />
+&nbsp; Speaker at Sanoma Knowledge Exchange in Helsinki, Finland (7.11.2016)<br />
 <br />
 
 <i>Learning Programming through Osmosis</i><a href="http://www.slideshare.net/maaretp/devoxxuk-learning-programming-through-osmosis">[slides]</a> <a href="https://www.youtube.com/watch?v=zIFEPCAkZCU&list=PLKuh52zVrL6l8RfKkezmHSMCcVqb2_NCC&">[video]</a><br />
